[gd_scene load_steps=10 format=3 uid="uid://b1ogyo5nluae0"]

[ext_resource type="Theme" uid="uid://qw2jld6ai0gx" path="res://themes/menu_theme.tres" id="1_yqeox"]
[ext_resource type="Script" uid="uid://uwwphw00gr8k" path="res://scenes/menu.gd" id="2_4ytvr"]
[ext_resource type="Script" uid="uid://ccqdonam4s6p0" path="res://scenes/menu_button.gd" id="2_con2f"]
[ext_resource type="AudioStream" uid="uid://mgsp07xafjg8" path="res://assets/sfx/button click1.mp3" id="3_con2f"]
[ext_resource type="AudioStream" uid="uid://dvpbid2l7yvry" path="res://assets/sfx/button select1.mp3" id="4_mhnvy"]
[ext_resource type="FontFile" uid="uid://5u287xhbah8n" path="res://assets/fonts/NotoSansJP-Bold.ttf" id="6_g3eks"]
[ext_resource type="Script" uid="uid://hvmb3jo5jopf" path="res://scenes/fullscreen_toggle.gd" id="7_v86rl"]
[ext_resource type="Script" uid="uid://dthyby3oa8aq1" path="res://scenes/back_button.gd" id="8_13sgg"]
[ext_resource type="Script" uid="uid://b1ju2cp2ld8tc" path="res://scenes/sound_toggle.gd" id="8_i6lef"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yqeox")
script = ExtResource("2_4ytvr")

[node name="background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -79.0
offset_right = 100.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1

[node name="start_button" type="Button" parent="background/VBoxContainer"]
layout_mode = 2
text = "START"
script = ExtResource("2_con2f")

[node name="click_sfx" type="AudioStreamPlayer" parent="background/VBoxContainer/start_button"]
stream = ExtResource("3_con2f")
pitch_scale = 1.5

[node name="hover_sfx" type="AudioStreamPlayer" parent="background/VBoxContainer/start_button"]
stream = ExtResource("4_mhnvy")
pitch_scale = 1.5

[node name="settings_button" type="Button" parent="background/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"
script = ExtResource("2_con2f")

[node name="click_sfx" type="AudioStreamPlayer" parent="background/VBoxContainer/settings_button"]
stream = ExtResource("3_con2f")
pitch_scale = 1.5

[node name="hover_sfx" type="AudioStreamPlayer" parent="background/VBoxContainer/settings_button"]
stream = ExtResource("4_mhnvy")
pitch_scale = 1.5

[node name="quit_button" type="Button" parent="background/VBoxContainer"]
layout_mode = 2
text = "QUIT"
script = ExtResource("2_con2f")

[node name="click_sfx" type="AudioStreamPlayer" parent="background/VBoxContainer/quit_button"]
stream = ExtResource("3_con2f")
pitch_scale = 1.5

[node name="hover_sfx" type="AudioStreamPlayer" parent="background/VBoxContainer/quit_button"]
stream = ExtResource("4_mhnvy")
pitch_scale = 1.5

[node name="menu_label" type="Label" parent="background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.5
offset_top = -233.5
offset_right = 206.5
offset_bottom = -168.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_g3eks")
theme_override_font_sizes/font_size = 44
text = "Random Ahh Game"

[node name="darken_bg" type="ColorRect" parent="background"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5294118)

[node name="VBoxContainer" type="VBoxContainer" parent="background/darken_bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="fullscreen_toggle" type="CheckButton" parent="background/darken_bg/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"
alignment = 1
script = ExtResource("7_v86rl")

[node name="click_sfx" type="AudioStreamPlayer" parent="background/darken_bg/VBoxContainer/fullscreen_toggle"]
stream = ExtResource("3_con2f")
pitch_scale = 1.5

[node name="hover_sfx" type="AudioStreamPlayer" parent="background/darken_bg/VBoxContainer/fullscreen_toggle"]
stream = ExtResource("4_mhnvy")
pitch_scale = 1.5

[node name="sound_toggle" type="CheckButton" parent="background/darken_bg/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Sound"
alignment = 1
script = ExtResource("8_i6lef")

[node name="click_sfx" type="AudioStreamPlayer" parent="background/darken_bg/VBoxContainer/sound_toggle"]
stream = ExtResource("3_con2f")
pitch_scale = 1.5

[node name="hover_sfx" type="AudioStreamPlayer" parent="background/darken_bg/VBoxContainer/sound_toggle"]
stream = ExtResource("4_mhnvy")
pitch_scale = 1.5

[node name="settings_back" type="Button" parent="background/darken_bg" node_paths=PackedStringArray("previous_node", "target_node")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -70.0
offset_right = 130.0
offset_bottom = -20.0
grow_vertical = 0
text = "Back"
script = ExtResource("8_13sgg")
previous_node = NodePath("..")
target_node = NodePath("../../VBoxContainer")

[node name="click_sfx" type="AudioStreamPlayer" parent="background/darken_bg/settings_back"]
stream = ExtResource("3_con2f")
pitch_scale = 1.5

[node name="hover_sfx" type="AudioStreamPlayer" parent="background/darken_bg/settings_back"]
stream = ExtResource("4_mhnvy")
pitch_scale = 1.5

[connection signal="mouse_entered" from="background/VBoxContainer/start_button" to="background/VBoxContainer/start_button" method="_on_mouse_entered"]
[connection signal="pressed" from="background/VBoxContainer/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="background/VBoxContainer/start_button" to="background/VBoxContainer/start_button" method="_on_pressed"]
[connection signal="mouse_entered" from="background/VBoxContainer/settings_button" to="background/VBoxContainer/settings_button" method="_on_mouse_entered"]
[connection signal="pressed" from="background/VBoxContainer/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="background/VBoxContainer/settings_button" to="background/VBoxContainer/settings_button" method="_on_pressed"]
[connection signal="mouse_entered" from="background/VBoxContainer/quit_button" to="background/VBoxContainer/quit_button" method="_on_mouse_entered"]
[connection signal="pressed" from="background/VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="background/VBoxContainer/quit_button" to="background/VBoxContainer/quit_button" method="_on_pressed"]
[connection signal="mouse_entered" from="background/darken_bg/VBoxContainer/fullscreen_toggle" to="background/darken_bg/VBoxContainer/fullscreen_toggle" method="_on_mouse_entered"]
[connection signal="pressed" from="background/darken_bg/VBoxContainer/fullscreen_toggle" to="background/darken_bg/VBoxContainer/fullscreen_toggle" method="_on_pressed"]
[connection signal="toggled" from="background/darken_bg/VBoxContainer/fullscreen_toggle" to="background/darken_bg/VBoxContainer/fullscreen_toggle" method="_on_toggled"]
[connection signal="mouse_entered" from="background/darken_bg/VBoxContainer/sound_toggle" to="background/darken_bg/VBoxContainer/sound_toggle" method="_on_mouse_entered"]
[connection signal="pressed" from="background/darken_bg/VBoxContainer/sound_toggle" to="background/darken_bg/VBoxContainer/sound_toggle" method="_on_pressed"]
[connection signal="toggled" from="background/darken_bg/VBoxContainer/sound_toggle" to="background/darken_bg/VBoxContainer/sound_toggle" method="_on_toggled"]
[connection signal="mouse_entered" from="background/darken_bg/settings_back" to="background/darken_bg/settings_back" method="_on_mouse_entered"]
[connection signal="pressed" from="background/darken_bg/settings_back" to="background/darken_bg/settings_back" method="_on_pressed"]
